CPT-76 # added price response
